@@ -32,6 +32,7 @@
 #include "widgets/icons.h"
 #include "support/actioncollection.h"
 #include "support/action.h"
+#include "support/configuration.h"
 #include "models/mpdlibrarymodel.h"
 #include "mpd-interface/cuefile.h"
 #include <QScrollBar>
@@ -66,7 +67,10 @@ AlbumView::AlbumView(QWidget *p)
 {
     engine=ContextEngine::create(this);
     refreshAction = ActionCollection::get()->createAction("refreshalbum", tr("Refresh Album Information"), Icons::self()->refreshIcon);
+    scaleCoverAction = ActionCollection::get()->createAction("scalealbumcover", tr("Scale Album Cover"));
+    scaleCoverAction->setCheckable(true);
     connect(refreshAction, SIGNAL(triggered()), this, SLOT(refresh()));
+    connect(scaleCoverAction, SIGNAL(toggled(bool)), this, SLOT(setScaleImage(bool)));
     connect(engine, SIGNAL(searchResult(QString,QString)), this, SLOT(searchResponse(QString,QString)));
     connect(Covers::self(), SIGNAL(cover(Song,QImage,QString)), SLOT(coverRetrieved(Song,QImage,QString)));
     connect(Covers::self(), SIGNAL(coverUpdated(Song,QImage,QString)), SLOT(coverUpdated(Song,QImage,QString)));
@@ -83,6 +87,12 @@ AlbumView::AlbumView(QWidget *p)
         connect(timer, SIGNAL(timeout()), this, SLOT(clearCache()));
         timer->start((int)((ArtistView::constCacheAge/2.0)*1000*24*60*60));
     }
+    scaleCoverAction->setChecked(Configuration(metaObject()->className()).get("scaleCover", false));
+}
+
+AlbumView::~AlbumView()
+{
+    Configuration(metaObject()->className()).set("scaleCover", scaleCoverAction->isChecked());
 }
 
 void AlbumView::showContextMenu(const QPoint &pos)
@@ -94,6 +104,7 @@ void AlbumView::showContextMenu(const QPoint &pos)
     } else {
         menu->addAction(refreshAction);
     }
+    menu->addAction(scaleCoverAction);
     menu->exec(text->mapToGlobal(pos));
     delete menu;
 }
